<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:ignore="Overdraw">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="39dp"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/add_note"
            android:textColor="@color/textOnPageColor"
            android:textFontWeight="700"
            android:textSize="25sp"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="39dp"
            android:hint="@string/add_note_title"
            android:textColorHint="@color/hintTextColor"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:hint="@string/add_note_message"
            android:textColorHint="@color/hintTextColor"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageField"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/text_fields"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/addNote"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="134dp"
            android:background="@drawable/bg_button_first_start"
            android:text="@string/add_note_button_text"
            android:textAllCaps="false"
            android:textFontWeight="500"
            android:textSize="@dimen/buttonTextSize"
            tools:targetApi="p" />


    </LinearLayout>

</FrameLayout>